--- a/src/components/GameButton.css
+++ b/src/components/GameButton.css
@@ -2,4 +2,14 @@
     border: .5rem solid #fff;
     cursor: pointer;
     caret-color: transparent;
+    position: relative;
+}
+
+.button .active {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: .5;
+    filter: blur(1rem);
 }
