--- a/src/components/GameButton.css
+++ b/src/components/GameButton.css
@@ -1,5 +1,14 @@
 .button {
     cursor: pointer;
     caret-color: transparent;
-    position: relative;
+    position: relative;  
 }
+
+.bounce {
+    animation: bounce .7s 1 ease-in-out;
+}
+
+@keyframes bounce {
+    from { transform: scale(.95); opacity: .5; }
+    to { transform: scale(1); opacity: 1; }
+  }
