--- a/src/components/Simon.css
+++ b/src/components/Simon.css
@@ -5,8 +5,9 @@
     max-height: 80vw;
     border-radius: 600px;
     display: grid;
-    padding: .5rem;
+    padding: 1rem;
     grid-template-columns: repeat(2, 1fr);
     caret-color: transparent;
     position: relative;
+    background-color: #fff;
 }
