--- a/src/components/Control.css
+++ b/src/components/Control.css
@@ -7,7 +7,7 @@
   width: 40%;
   background-color: #3f3f3f;
   border-radius: 200px;
-  border: 1rem solid #fff;
+  border: 1rem solid #15263F;
   display: flex;
   align-items: center;
   justify-content: center;
