--- a/src/components/Control.css
+++ b/src/components/Control.css
@@ -58,18 +58,27 @@
 }
 
 @media screen and (max-width: 414px) {
+  .control {
+    border: .6rem solid #15263F;
+  }
   .control h2 {
     font-size: 2.5rem;
   }
 }
 
 @media screen and (max-width: 375px) {
+  .control {
+    border: .5rem solid #15263F;
+  }
   .control h2 {
     font-size: 2rem;
   }
 }
 
 @media screen and (max-width: 280px) {
+  .control {
+    border: .3rem solid #15263F;
+  }
   .control h2 {
     font-size: 1.5rem;
   }
