--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,9 @@
   justify-content: center;
   background-color: #15263F;
 }
+
+@media screen and (max-width: 820px) {
+  .App {
+      min-width: auto;
+  }
+}
