added reset button

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -21,11 +21,29 @@
     text-align: center;
     font-size: 6rem;
     border-radius: 2rem;
-    font-family: 'Odibee Sans', cursive;
     font-style: italic;
     color: #ececec;
     text-shadow: 5px 8px 7px rgba(2, 2, 2, .9);
     caret-color: transparent;
+}
+
+.reset {
+    position: fixed;
+    z-index: 20;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    font-size: 4rem;
+    color: #ececec;
+    caret-color: transparent;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.reset:hover {
+    opacity: .8!important;
 }
 
 .game__over {
